--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,19 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	// Define a special configuration for dev-only dependencies
+	developmentOnly
+	runtimeClasspath {
+		extendsFrom developmentOnly
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
 
 tasks.named('test') {
